# brownfield-cartographer

./: .gitignore  README.md  REPORT.md  main.py  pyproject.toml  requirements.txt
.agents/rules/: REQUIREMENTS.md
docs/: SCHEMA_VERSIONING.md
src/: __init__.py  cli.py  evidence_verification.py  orchestrator.py  self_audit.py
src/agents/: __init__.py  archivist.py  hydrologist.py  navigator.py  semanticist.py  surveyor.py
src/analyzers/: __init__.py  dag_config_parser.py  sql_lineage.py  tree_sitter_analyzer.py
src/cartographer/: __init__.py  knowledge_graph.py  surveyor.py
src/cartographer/core/: __init__.py  language_router.py
src/graph/: __init__.py  knowledge_graph.py  render_graph.py  semantic_index.py
src/models/: __init__.py  schemas.py
src/tools/: repo_tools.py
src/tracing/: __init__.py  cartography_trace.py
