[project]
name = "brownfield-cartographer"
version = "0.1.0"
description = "Brownfield Cartographer: multi-agent codebase and data lineage analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-sql>=0.3.0",
    "tree-sitter-yaml>=0.0.3",
    "tree-sitter-javascript>=0.22.0",
    "tree-sitter-typescript>=0.22.0",
    "sqlglot>=25.0.0",
    "networkx>=3.2",
    "numpy>=1.24",
    "scipy>=1.10",
    "pydantic>=2.0",
    "langgraph>=0.2",
    "litellm>=1.0",
    "gitpython>=3.1",
    "python-dotenv>=1.0",
    "dbt-artifacts-parser>=0.12.0",
    "nbformat>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
